Horizontal scroll FIX. About-us link block FIX.

--- a/master.css
+++ b/master.css
@@ -43,9 +43,11 @@ body.index {/* background: url('images/bg_index.jpg') repeat-x #f8f8f8; */backgr
 
 	/* Nav responsiveness */
 	@media only screen and (max-width: 1320px) { #nav li a { padding: 42px 16px; font-size: 15px; } }
-	@media only screen and (max-width: 1130px) { #nav { width: 790px; margin-right: -3% !important; } #nav li a { padding: 43px 12px; font-size: 14px; } }
+	@media only screen and (max-width: 1130px) { #nav { width: 740px; margin-right: 0 !important; } #nav li a { padding: 43px 12px; font-size: 14px; } }
 	@media only screen and (max-width: 1045px) { #nav { width: 720px; margin-right: -2% !important; } #nav li a { padding: 43px 12px; font-size: 13px; } }
-	@media only screen and (max-width: 945px) { #nav { float: none !important; width: 910px; } }
+	@media only screen and (max-width: 945px) { #nav { width: 700px; } }
+	@media only screen and (max-width: 905px) { #nav { float: none !important; width: 840px; } }
+	
 
 #nav { float: right; opacity: .99; margin-right: 4%; font-size: 16px; font-weight: 400; text-transform: uppercase; }
 #nav:hover {  }
@@ -60,7 +62,7 @@ body.index {/* background: url('images/bg_index.jpg') repeat-x #f8f8f8; */backgr
 
 /* INDEX page ------------------------------- */
 
-.index { overflow-x: hidden; overflow-y: auto; }
+@media only screen and (min-width: 960px) { .index { overflow-x: hidden; overflow-y: auto; } }
 .index #top { position: relative; }
 .index #top h2 { padding-bottom: 20px; font-size: 46px; font-weight: 700; line-height: 44px; letter-spacing: -1px; /*color: #525252;*/ color: #fff; }
 /*.index #top h2 span { font-weight: 500; color: #ccc; }*/
@@ -122,7 +124,7 @@ body.index {/* background: url('images/bg_index.jpg') repeat-x #f8f8f8; */backgr
 	#screenshots-fade a.button { width: 306px; margin: 136px auto 0 auto; }
 
 /* PRODUCT page ------------------------------- */
-.product { overflow-x: hidden; overflow-y: auto; }
+@media only screen and (min-width: 960px) { .product { overflow-x: hidden; overflow-y: auto; } }
 .product #content { padding-top: 60px; }
 
 .product #content #top { margin-bottom: 90px; }
@@ -388,7 +390,7 @@ box-shadow: inset 0 0 10px 0 #676666, 0 1px 5px 0 rgba(0, 0, 0, .2);*/ text-shad
 #list-of-people li.active { background: #ededed; -webkit-box-shadow: inset 0 1px 2px 0 #e1e1e1; -moz-box-shadow: inset 0 1px 2px 0 #e1e1e1; box-shadow: inset 0 1px 2px 0 #e1e1e1; }
 /*#list-of-people li:nth-child(3),#list-of-people li:nth-child(6) { margin-right: 0 !important; }
 */
-#list-of-people li a { width: 100%; height: 100%; position: relative; z-index: 99; }
+#list-of-people li a { display: block; width: 100%; height: 100%; position: relative; z-index: 99; }
 #list-of-people li div a { padding: 0; color: #2685BC; }
 #list-of-people li img { float: left; margin: 10px 15px 10px 10px; }
 #list-of-people li h3 { float: left; margin-top: 14px; font-size: 18px; color: #7d7d7d; font-family: "Adelle"; font-weight: 600; }
